--- a/bugs.html
+++ b/bugs.html
@@ -2,7 +2,7 @@
 <meta http-equiv="content-type" content="text/html; charset=windows-1252"></head><body>
 <b>Bugs</b>
 <br>
-Contributor: Christiano
+Author: Christiano
 <br>
 <pre>
 Programming: Principles and Practice Using C++
